# TerraMowHA

./: README.md  dev_setup.sh  hacs.json  pyproject.toml
custom_components/terramow/: __init__.py  binary_sensor.py  config_flow.py  const.py  lawn_mower.py  manifest.json  map_sensor.py  number.py  select.py  sensor.py  strings.json
custom_components/terramow/translations/: de.json  en.json  zh-Hans.json
docs/: README_zh.md
docs/en/: developers.md
docs/en/developers/: data_point.md
docs/zh/: developers.md
docs/zh/developers/: data_point.md
